@@ -2,6 +2,7 @@
 
 2007/08/20
  - fix update of locationid field during label barcodes 
+ - use update recyclepool= instead of UPDATE Media SET RecyclePoolId
 
 2007/08/11
  - update install_bweb
